Hopefully fixing fluid scrolling on iPhones

--- a/songscore/static/stylesheet.css
+++ b/songscore/static/stylesheet.css
@@ -9,6 +9,9 @@ body,html {
   height: 100%;
   width: 100%;
   -webkit-tap-highlight-color: rgba(0,0,0,0)
+   overflow-y: scroll;
+   -webkit-overflow-scrolling: touch;
+
 }
 
 html {
@@ -1230,9 +1233,9 @@ input:focus ~ .highlight {
 }
 
 /*
- * 
+ *
  * PASTING IN MY NEW CSS HERE
- * 
+ *
  */
 
 .card {
@@ -1329,7 +1332,7 @@ input:focus ~ .highlight {
 	display: flex;
 	padding: 8px;
 	background-color: rgba(0,0,0,0.03);
-	border-top: 1px solid rgba(0,0,0,0.15);	
+	border-top: 1px solid rgba(0,0,0,0.15);
 	height: 36px;
 }
 	.social button {
@@ -1394,8 +1397,8 @@ input:focus ~ .highlight {
 	color: black;
 }
 
-/* 
- * 
+/*
+ *
  * END OF ANGUS'S REVIEW CARD CSS
- * 
+ *
  */
